manifest/objects/Experience_Center_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Experience Center Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Experience Center Contacts</relationshipLabel>
        <relationshipName>Experience_Center_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Experience_Center_Briefing_Request__c</fullName>
        <label>Experience Center Briefing Request</label>
        <referenceTo>Briefing__c</referenceTo>
        <relationshipLabel>Experience Center Contacts</relationshipLabel>
        <relationshipName>Experience_Center_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Experience Center Contact</label>
    <nameField>
        <displayFormat>ECC-{0000}</displayFormat>
        <label>Experience Center Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Center Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>